# ChangeLog for app-editors/gvim
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.439 2014/10/11 18:35:54 mgorny Exp $

  11 Oct 2014; Michał Górny <mgorny@gentoo.org> files/gvim-completion,
  gvim-7.4.430.ebuild:
  Install necessary bash-completion aliases, bug #521152. Update completed
  command list in the file.

  19 Sep 2014; Agostino Sarubbo <ago@gentoo.org> gvim-7.4.273.ebuild:
  Stable for ppc64, wrt bug #511190

  06 Sep 2014; Tim Harder <radhermit@gentoo.org> gvim-7.4.430.ebuild,
  gvim-9999.ebuild:
  Revert to using a single, compressed patch file.

*gvim-7.4.430 (05 Sep 2014)

  05 Sep 2014; Tim Harder <radhermit@gentoo.org> +gvim-7.4.430.ebuild,
  gvim-9999.ebuild:
  Version bump. Use upstream patches instead of rolling our own (thanks to
  exherbo for the code) and fix cross-compile issues (bug #473372).

  27 Aug 2014; Agostino Sarubbo <ago@gentoo.org> gvim-7.4.273.ebuild:
  Stable for ppc, wrt bug #511190

*gvim-7.4.417 (25 Aug 2014)

  25 Aug 2014; Tim Harder <radhermit@gentoo.org> +gvim-7.4.417.ebuild:
  Version bump.

  01 Aug 2014; Raúl Porcel <armin76@gentoo.org> gvim-7.4.273.ebuild:
  sparc stable, bug #511190

  20 Jul 2014; Tobias Klausmann <klausman@gentoo.org> gvim-7.4.273.ebuild:
  Stable on alpha, bug #511190

  26 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> gvim-7.4.273.ebuild:
  amd64 stable wrt bug #511190

  24 Jun 2014; Markus Meier <maekke@gentoo.org> gvim-7.4.273.ebuild:
  arm stable, bug #511190

  22 Jun 2014; Akinori Hattori <hattya@gentoo.org> gvim-7.4.273.ebuild:
  ia64 stable wrt bug #511190

  17 Jun 2014; Jeroen Roovers <jer@gentoo.org> gvim-7.4.273.ebuild:
  Stable for HPPA (bug #511190).

*gvim-7.4.326 (16 Jun 2014)

  16 Jun 2014; Tim Harder <radhermit@gentoo.org> +gvim-7.4.326.ebuild:
  Version bump.

*gvim-7.4.273 (01 May 2014)

  01 May 2014; Tim Harder <radhermit@gentoo.org> +gvim-7.4.273.ebuild:
  Version bump.
