@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/vim
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/vim/ChangeLog,v 1.471 2014/10/11 18:34:46 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/vim/ChangeLog,v 1.472 2014/10/12 09:02:01 ago Exp $
+
+  12 Oct 2014; Agostino Sarubbo <ago@gentoo.org> vim-7.4.273.ebuild:
+  Stable for x86, wrt bug #511190
 
   11 Oct 2014; Michał Górny <mgorny@gentoo.org> files/vim-completion,
   vim-7.4.430.ebuild, vim-9999.ebuild:
