@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/gvim
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.439 2014/10/11 18:35:54 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.440 2014/10/12 09:01:57 ago Exp $
+
+  12 Oct 2014; Agostino Sarubbo <ago@gentoo.org> gvim-7.4.273.ebuild:
+  Stable for x86, wrt bug #511190
 
   11 Oct 2014; Michał Górny <mgorny@gentoo.org> files/gvim-completion,
   gvim-7.4.430.ebuild:
